cmake_minimum_required(VERSION 3.28)

set(CMAKE_CXX_STANDARD 26)

add_executable(untitled main.cpp Scuola.cpp Studente.cpp
        ../H7.2/Giocatore.h
        ../H7.2/Classes/Player.cpp
        ../H7.2/HeaderFile/Player.h
        ../H7.2/Classes/SCF.cpp
        ../H7.2/HeaderFile/SCF.h
        ../H7.2/Classes/DiceRoll.cpp
        ../H7.2/HeaderFile/DiceRoll.h
        ../H7.2/HeaderFile/DiceRoll.h
        ../H7.2/Classes/GameRoom.cpp
        ../H7.2/HeaderFile/GameRoom.h
        ../H7.2/main.cpp
        ../H7.2/HeaderFile/Player.h
        ../H7.2/HeaderFile/Move.h
        Studente.cpp
        Studente.cpp
        Studente.cpp)
